--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ x-sentry-defaults: &sentry_defaults
   build:
     context: ./sentry
     args:
-      - SENTRY_IMAGE
+      SENTRY_IMAGE: ${SENTRY_IMAGE}
   depends_on:
     redis:
       <<: *depends_on-healthy
@@ -529,15 +529,8 @@ volumes:
     external: true
   sentry-symbolicator:
     external: true
-  # This volume stores JS SDK assets and the data inside this volume should
-  # be cleaned periodically on upgrades.
   sentry-nginx-www:
-  # This volume stores profiles and should be persisted.
-  # Not being external will still persist data across restarts.
-  # It won't persist if someone does a docker compose down -v.
   sentry-vroom:
-  # These store ephemeral data that needn't persist across restarts.
-  # That said, volumes will be persisted across restarts until they are deleted.
   sentry-secrets:
   sentry-smtp:
   sentry-nginx-cache:
