--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,5 @@
 # استثناء ملفات محددة من التحويل (مثل ملفات الصور أو الثنائية)
 *.png binary
 *.jpg binary
+# مثال: فرض LF على ملفات الـ YAML
+*.yml text eol=lf
